# gladius

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
backup/: _client_gladius_0.js  _client_gladius_10.js  _client_gladius_11.js  _client_gladius_12.js  _client_gladius_13.js  _client_gladius_2.js  _client_gladius_3.js  _client_gladius_4.js  _client_gladius_5.js  _client_gladius_6.js  _client_gladius_7.js  _client_gladius_8.js  _client_gladius_9.js  _client_gladius_base_0.js  _client_gladius_base_2.js  element.py  gladius.py  script.py  types.py
backup-250126-0/daisyui_tailwind_lite/: app.py
backup-250126-0/demo_0/: app.py  demo.html
backup-250126-0/pico_demo_1/: app.py
backup-250126-0/pico_demo_3/: app.py
backup-250126-0/pico_demo_5/: app.py
backup-250130-0/demo_2/: app.py
backup-250130-0/demo_5/: app.py
backup-250130-0/demo_5/static/tailwind-lite/: index.css
backup/demo_0/: app.py
backup/demo_1/: app.py
backup/demo_10/: app.py  b.py
backup/demo_10/client/: App.tsx
backup/demo_2/: app.py
backup/demo_3/: client_app.py
backup/demo_4/: app.py
backup/demo_5/: app.py  client_app.py
backup/demo_6/: app.py  client_app.py
backup/demo_6/components/: Message.html
backup/demo_6a/components/: Messages.jsx
backup/demo_6b/: app.py
backup/demo_7/: app.py
backup/demo_8a/: app.py
backup/demo_9/: app.py
backup/demo_9a/: app.py
backup/demo_mpy_0/: app.py
backup/demo_mpy_2/: client_app.py
backup/demo_mpy_3/: app.py
examples/: pico_preview.py
examples/demo_0/: .gitignore  app.py
examples/demo_1/: app.py
examples/demo_10/: a.py  app.py
examples/demo_10/client/: App.tsx
examples/demo_2/: app.py  client_app.py
examples/demo_3/: app.py  client_app.py
examples/demo_3/client/: app.py
examples/demo_4/: app.py  client_app.py
examples/demo_5/: app.py  client_app.py
examples/demo_6/: app.py  client_app.py
examples/demo_6/components/: Messages.html
examples/demo_6a/: app.py  client_app.py
examples/demo_6a/components/: App.jsx
examples/demo_6b/: app.py
examples/demo_6b/client/: app.py
examples/demo_7/: app.py
examples/demo_8/: app.py
examples/demo_8a/client/: app.py
examples/demo_9/client/: App.tsx
examples/demo_9a/client/: App.tsx
examples/demo_bpy_0/: app.py
examples/demo_bpy_0a/: client_utils.py
examples/demo_bpy_1/: app.py  client_app.py
examples/demo_bpy_2/: app.py
examples/demo_bpy_2a/: app.py
examples/demo_bpy_2b/: app.py  client_app.py
examples/demo_bpy_2b/components/: Body.html  Main.html  Message.html  Messages.html
examples/demo_mpy_1/: app.py
examples/demo_mpy_2/: app.py
examples/hyperscript/: h0.py  h1.py  h2.py
examples/pico_demo_0/: app.py
examples/pico_demo_0/client/: App.py  App.tsx  app.py
examples/pico_demo_2/: app.py
examples/pico_demo_4/: app.py
examples/pico_demo_5/: package-lock.json  package.json
examples/pico_demo_py_0/: app.py
examples/pico_demo_py_0/client/: App.py  app.py  style.css
examples/pico_demo_tsx_0/: app.py
examples/pico_demo_tsx_0/client/: App.tsx
examples/pico_preview/: app.py  pico_preview.py
gladius/: __init__.py  _client_gladius.js  _client_gladius.py  _client_gladius.ts  aiohttp.py  defs.py  element.py  gladius.py  hyperscript.py  imports.py  mock_module.py  npm.py  script.py  starter.py  types.py  util.py  utils.py
gladius/aaa/c/: d.py
gladius/starter/: __init__.py  brython_aiohttp.py  old_starter.py
misc/pico_demo_2/: app.py
misc/pico_demo_3/: package-lock.json  package.json
misc/pico_demo_4/static/: main.py
misc/pico_demo_5/static/: app.py  pyscript.toml
(+55 files in other folders)
