[project]
name = "gladius"
version = "0.4.0"
description = "Gladius is a library facilitating web application development exclusively in pure Python"
authors = [
    { name = "Tangled Group, Inc", email = "info@tangledgroup.com" },
    { name = "Marko Tasic", email = "mtasic85@gmail.com" },
]
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/tangledgroup/gladius"
repository = "https://github.com/tangledgroup/gladius"
documentation = "https://github.com/tangledgroup/gladius"
"Bug Tracker" = "https://github.com/tangledgroup/gladius/issues"

[tool.poetry.dependencies]
python = "^3.10"
# attrs = "^25.1.0"
# cattrs = "^24.1.2"
deepmerge = "^2.0"
json5 = "^0.12.0"
uvloop = {version = "^0.21.0", optional = true}
aiohttp = {extras = ["speedups"], version = "^3.11.12", optional = true}
gunicorn = {version = "23.0.0", optional = true}
inotify = {version = "^0.2.10", optional = true}
tqdm = {version = "^4.67.1", optional = true}
nodejs-wheel = {version = "^22.14.0", optional = true}

[tool.poetry.extras]
all = ["uvloop", "aiohttp", "gunicorn", "inotify", "tqdm", "nodejs-wheel"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
